# psi-with-sgx

./: .gitignore  CMakeLists.txt  GeneralSettings.h  README.md
Enclave/: Enclave.cpp  Enclave.h  Report.cpp  Report.h  WebService.cpp  WebService.h
Enclave_shared/: IASReport.cpp  IASReport.h  LogSgx.h  UtilityFunctions.cpp  UtilityFunctions.h
Util/: LogBase.cpp  LogBase.h
onesided/: onesided.config.xml  onesided.cpp  onesided.edl
onesided-app/: main.cpp  networking.cpp  networking.h  radixsort.cpp  radixsort.h
